# nl-mgo-coordination

./: .gitignore  .gitmodules  LICENSE.md  Makefile  Project Management.rst  README.md  Team Verantwoordelijkheden.rst  technologies  toolset.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: called-regression-testing.yml  local-regression-testing.yml  morning-caller.yml  morning-on-acc.yml  morning-on-test.yml  regression-on-pr.yml  validate_pr_description.yaml
Processen/: MGO Release Management procesflow final  TEMP-ACC release MGO apps v1.0.xltx  Templates
architecture/: Considerations.md
backend/: checklist-new-feature.md
integration/: Makefile  README.md  docker-compose.yml
integration/.devcontainer/max/: devcontainer.json
integration/docker/brp/: test-data.json
integration/docker/dva/: Dockerfile
integration/docker/dvp/: Dockerfile  entrypoint.sh
integration/docker/dvp-proxy/: app.conf
integration/docker/max/: clients.json  max.conf  vad.conf
integration/scripts/: distribute_signing_keys.sh
regression-tests/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  runtests-in-docker.sh  runtests.sh
regression-tests/libs/: extended_collections.py
regression-tests/resources/: extended_collections.py  globalLibraries.resource  globalResources.resource  globalVariables.resource  variables.py
regression-tests/tests/: MedMijOAuth.robot  VAD_POC.robot
services/load/: README.MD
services/mock/: README.md
services/proxy/: README.md
(+44 files in other folders)
